--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - r-vgam
     - r-bbmle >=1.0.19
     - r-poilog
+    - r-powerlaw
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
@@ -43,6 +44,7 @@ requirements:
     - r-vgam
     - r-bbmle >=1.0.19
     - r-poilog
+    - r-powerlaw
 
 test:
   commands:
@@ -51,10 +53,11 @@ test:
 
 about:
   home: http://piLaboratory.github.io/sads, https://github.com/piklprado/sads
-  license: GPL-2
+  license: GPL-2.0-only
   summary: Maximum likelihood tools to fit and compare models of species abundance distributions and of species rank-abundance distributions.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
