--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,22 +12,33 @@ source:
   sha256: 0edc6f37f407e8dc8c363cdbe871a9ebc9b56a37f104928c44f23b35b0fed3a4
 
 build:
-  number: 1
+  number: 2
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
-    - {{ compiler('c') }}              # [not win]
-    - {{ stdlib("c") }}                # [not win]
-    - {{ compiler('m2w64_c') }}        # [win]
-    - {{ stdlib("m2w64_c") }}          # [win]
-    - {{ posix }}filesystem        # [win]
+    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
+    - r-guilds                   # [build_platform != target_platform]
+    - r-mass                     # [build_platform != target_platform]
+    - r-vgam                     # [build_platform != target_platform]
+    - r-bbmle >=1.0.19           # [build_platform != target_platform]
+    - r-poilog                   # [build_platform != target_platform]
+    - r-powerlaw                 # [build_platform != target_platform]
+    - {{ compiler('c') }}        # [not win]
+    - {{ stdlib("c") }}          # [not win]
+    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ stdlib("m2w64_c") }}    # [win]
+    - {{ posix }}filesystem      # [win]
     - {{ posix }}make
-    - {{ posix }}sed               # [win]
-    - {{ posix }}coreutils         # [win]
-    - {{ posix }}zip               # [win]
+    - {{ posix }}sed             # [win]
+    - {{ posix }}coreutils       # [win]
+    - {{ posix }}zip             # [win]
   host:
     - r-base
     - r-guilds
@@ -51,7 +62,8 @@ test:
     - "\"%R%\" -e \"library('sads')\""  # [win]
 
 about:
-  home: http://piLaboratory.github.io/sads, https://github.com/piklprado/sads
+  home: http://piLaboratory.github.io/sads
+  dev_url: https://github.com/piklprado/sads
   license: GPL-2.0-only
   summary: Maximum likelihood tools to fit and compare models of species abundance distributions and of species rank-abundance distributions.
   license_family: GPL2
@@ -62,25 +74,3 @@ extra:
   recipe-maintainers:
     - conda-forge/r
     - jenzopr
-
-# Package: sads
-# Type: Package
-# Title: Maximum Likelihood Models for Species Abundance Distributions
-# Version: 0.4.2
-# Date: 2018-06-16
-# Author: Paulo I. Prado, Murilo Dantas Miranda and Andre Chalom
-# Maintainer: Paulo I. Prado <prado@ib.usp.br>
-# Depends: stats, bbmle (>= 1.0.19)
-# Imports: MASS, methods, graphics, grDevices, VGAM, poilog, GUILDS
-# Suggests: vegan
-# Description: Maximum likelihood tools to fit and compare models of species abundance distributions and of species rank-abundance distributions.
-# License: GPL-2
-# LazyData: true
-# Encoding: UTF-8
-# URL: http://piLaboratory.github.io/sads, https://github.com/piklprado/sads
-# BugReports: https://github.com/piLaboratory/sads/issues
-# RoxygenNote: 6.0.1
-# NeedsCompilation: yes
-# Packaged: 2018-06-16 22:21:53 UTC; paulo
-# Repository: CRAN
-# Date/Publication: 2018-06-16 22:47:56 UTC
